--- a/P009223.opf/meta.yml
+++ b/P009223.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009223
+id: P009223
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W8LS18547
   title: བོད་སྨན་གཏེར་དངོས་རིག་པ།
-  volume: ''
   author: ''
+  volumes: {}
