--- a/P009223.opf/layers/v001/Pagination.yml
+++ b/P009223.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 578cf3e4eab64fb1ae6cb56a0e90c2cb
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bdb13988ce8745378a6678af3f7d4077:
