--- a/P009223.opf/meta.yml
+++ b/P009223.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009223
 initial_creation_type: ocr
+created_at: 23/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W8LS18547
   title: བོད་སྨན་གཏེར་དངོས་རིག་པ།
