--- a/P009223.opf/meta.yml
+++ b/P009223.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009223
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:28:47.169716
 source_metadata:
   id: bdr:W8LS18547
   title: བོད་སྨན་གཏེར་དངོས་རིག་པ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 243
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: true
